crates/plantuml-core/tests/snapshots/sequence_tests__participant_types.snap
---
source: crates/plantuml-core/tests/sequence_tests.rs
assertion_line: 49
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg contentStyleType="text/css" data-diagram-type="SEQUENCE" height="307px" preserveAspectRatio="none" style="width:212px;height:307px;background:#FFFFFF;" version="1.1" viewBox="0 0.5 211.55319999999998 306.86800000000005" width="212px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" zoomAndPan="magnify">
<defs>
<marker id="arrow" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8 L4,4 Z" fill="#181818" stroke="#181818" stroke-linejoin="miter" stroke-width="1"/>
</marker>
<marker id="arrow-open" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="inheritance" markerHeight="20" markerUnits="userSpaceOnUse" markerWidth="20" orient="auto" refX="20" refY="10">
<path d="M0,0 L20,10 L0,20 Z" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="composition" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#181818"/>
</marker>
<marker id="aggregation" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#FFF" stroke="#181818" stroke-width="1"/>
</marker>
</defs>
<g font-family="sans-serif" lengthAdjust="spacing">
<g id="lifeline_User">
<path d="M32.9551,85.297 L32.9551,220.69600000000003" fill="none" stroke="#181818" stroke-dasharray="5,5" stroke-width="0.5"/>
</g>
<g id="lifeline_Admin">
<path d="M119.97389999999999,85.297 L119.97389999999999,220.69600000000003" fill="none" stroke="#181818" stroke-dasharray="5,5" stroke-width="0.5"/>
</g>
<g id="lifeline_DB">
<path d="M183.4822,85.297 L183.4822,220.69600000000003" fill="none" stroke="#181818" stroke-dasharray="5,5" stroke-width="0.5"/>
</g>
<g id="participant_Admin">
<ellipse cx="119.97389999999999" cy="18.5" fill="#E2E2F0" rx="8" ry="8" stroke="#181818" stroke-width="0.5"/>
<path d="M119.97389999999999,26.5 L119.97389999999999,53.5 M106.974,34.5 L132.974,34.5 M119.97389999999999,53.5 L106.974,68.5 M119.97389999999999,53.5 L132.974,68.5" fill="none" stroke="#181818" stroke-width="0.5"/>
<text fill="#000" font-family="sans-serif" font-size="14" text-anchor="middle" x="116.97389999999999" y="82.99499999999999" textLength="44.864">
Admin
</text>
</g>
<g id="participant_DB">
<path d="M165.482,34 L165.482,60 C165.482,70 183.4822,70 183.4822,70 C183.4822,70 201.482,70 201.482,60 L201.482,34" fill="#E2E2F0" stroke="#181818" stroke-width="0.5"/>
<path d="M165.482,34 C165.482,24 183.4822,24 183.4822,24 C183.4822,24 201.482,24 201.482,34" fill="none" stroke="#181818" stroke-width="0.5"/>
<text fill="#000" font-family="sans-serif" font-size="14" text-anchor="middle" x="180.4822" y="82.99499999999999" textLength="20.384">
DB
</text>
</g>
<g id="msg_User_Admin">
<path d="M32.9551,115.297 L119.97389999999999,115.297" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000" font-family="sans-serif" font-size="13" text-anchor="start" x="39.9551" y="110.297" textLength="53.39">
Request
</text>
</g>
<g id="msg_Admin_DB">
<path d="M119.97389999999999,144.43 L183.4822,144.43" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000" font-family="sans-serif" font-size="13" text-anchor="start" x="126.97389999999999" y="139.43" textLength="39.508">
Query
</text>
</g>
<g id="msg_DB_Admin">
<path d="M183.4822,173.56300000000002 L119.97389999999999,173.56300000000002" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-dasharray="2,2" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000" font-family="sans-serif" font-size="13" text-anchor="start" x="136.9739" y="168.56300000000002" textLength="31.04">
Data
</text>
</g>
<g id="msg_Admin_User">
<path d="M119.97389999999999,202.69600000000003 L32.9551,202.69600000000003" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-dasharray="2,2" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000" font-family="sans-serif" font-size="13" text-anchor="start" x="49.9551" y="197.69600000000003" textLength="63.019">
Response
</text>
</g>
<g id="footer_Admin">
<ellipse cx="119.97389999999999" cy="245.49300000000002" fill="#E2E2F0" rx="8" ry="8" stroke="#181818" stroke-width="0.5"/>
<path d="M119.97389999999999,253.493 L119.97389999999999,280.493 M106.974,261.493 L132.974,261.493 M119.97389999999999,280.493 L106.974,295.493 M119.97389999999999,280.493 L132.974,295.493" fill="none" stroke="#181818" stroke-width="0.5"/>
<text fill="#000" font-family="sans-serif" font-size="14" text-anchor="middle" x="116.97389999999999" y="233.69100000000003" textLength="44.864">
Admin
</text>
</g>
<g id="footer_DB">
<path d="M165.482,246.993 L165.482,272.993 C165.482,282.993 183.4822,282.993 183.4822,282.993 C183.4822,282.993 201.482,282.993 201.482,272.993 L201.482,246.993" fill="#E2E2F0" stroke="#181818" stroke-width="0.5"/>
<path d="M165.482,246.993 C165.482,236.993 183.4822,236.993 183.4822,236.993 C183.4822,236.993 201.482,236.993 201.482,246.993" fill="none" stroke="#181818" stroke-width="0.5"/>
<text fill="#000" font-family="sans-serif" font-size="14" text-anchor="middle" x="180.4822" y="233.69100000000003" textLength="20.384">
DB
</text>
</g>
<g id="participant_User">
<rect fill="#E2E2F0" height="30.297" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="45.9102" x="10" y="55"/>
<text dominant-baseline="middle" fill="#000" font-family="sans-serif" font-size="14" text-anchor="middle" x="32.9551" y="70.1485" textLength="31.91">
User
</text>
</g>
<g id="footer_User">
<rect fill="#E2E2F0" height="30.297" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="45.9102" x="10" y="220.69600000000003"/>
<text dominant-baseline="middle" fill="#000" font-family="sans-serif" font-size="14" text-anchor="middle" x="32.9551" y="235.84450000000004" textLength="31.91">
User
</text>
</g>
</g>
</svg>
