crates/plantuml-core/tests/snapshots/sequence_tests__self_message.snap
---
source: crates/plantuml-core/tests/sequence_tests.rs
assertion_line: 67
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg contentStyleType="text/css" data-diagram-type="SEQUENCE" height="161px" preserveAspectRatio="none" style="width:172px;height:161px;background:#FFFFFF;" version="1.1" viewBox="-0.000000000000003552713678800501 0 172.23099999999997 161.336" width="172px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" zoomAndPan="magnify">
<defs>
<marker id="arrow" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8 L4,4 Z" fill="#181818" stroke="#181818" stroke-linejoin="miter" stroke-width="1"/>
</marker>
<marker id="arrow-open" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="inheritance" markerHeight="20" markerUnits="userSpaceOnUse" markerWidth="20" orient="auto" refX="20" refY="10">
<path d="M0,0 L20,10 L0,20 Z" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="composition" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#181818"/>
</marker>
<marker id="aggregation" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#FFF" stroke="#181818" stroke-width="1"/>
</marker>
</defs>
<g font-family="sans-serif" lengthAdjust="spacing">
<g id="lifeline_Server">
<path d="M39.955799999999996,40.297 L39.955799999999996,119.164" fill="none" stroke="#181818" stroke-dasharray="5,5" stroke-width="0.5"/>
</g>
<g id="msg_Server_Server">
<path d="M39.955799999999996,70.297 L81.9558,70.297 L81.9558,83.297 L39.955799999999996,83.297" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000" font-family="sans-serif" font-size="13" text-anchor="start" x="44.955799999999996" y="65.297" textLength="49.829">
Process
</text>
</g>
<g id="msg_Server_Server_2">
<path d="M39.955799999999996,100.297 L81.9558,100.297 L81.9558,113.297 L39.955799999999996,113.297" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000" font-family="sans-serif" font-size="13" text-anchor="start" x="44.955799999999996" y="95.297" textLength="53.396">
Validate
</text>
</g>
<g id="participant_Server">
<rect fill="#E2E2F0" height="30.297" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="59.9116" x="10" y="10"/>
<text dominant-baseline="middle" fill="#000" font-family="sans-serif" font-size="14" text-anchor="middle" x="39.955799999999996" y="25.1485" textLength="45.912">
Server
</text>
</g>
<g id="footer_Server">
<rect fill="#E2E2F0" height="30.297" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="59.9116" x="9.999999999999996" y="119.164"/>
<text dominant-baseline="middle" fill="#000" font-family="sans-serif" font-size="14" text-anchor="middle" x="39.955799999999996" y="134.3125" textLength="45.912">
Server
</text>
</g>
</g>
</svg>
