crates/plantuml-core/tests/snapshots/sequence_tests__simple_sequence.snap
---
source: crates/plantuml-core/tests/sequence_tests.rs
assertion_line: 25
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg contentStyleType="text/css" height="147.727" preserveAspectRatio="none" version="1.1" viewBox="5 5 160 147.727" width="160" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" zoomAndPan="magnify">
<defs>
<marker id="arrow" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8 L4,4 Z" fill="#181818"/>
</marker>
<marker id="arrow-open" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="inheritance" markerHeight="20" markerUnits="userSpaceOnUse" markerWidth="20" orient="auto" refX="20" refY="10">
<path d="M0,0 L20,10 L0,20 Z" fill="#FFFFFF" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="composition" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#181818"/>
</marker>
<marker id="aggregation" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#FFFFFF" stroke="#181818" stroke-width="1"/>
</marker>
</defs>
<g id="lifeline_Alice">
<path d="M35,40.297 L35,117.42999999999999" fill="none" stroke="#181818" stroke-dasharray="5,5" stroke-width="0.5"/>
</g>
<g id="lifeline_Bob">
<path d="M135,40.297 L135,117.42999999999999" fill="none" stroke="#181818" stroke-dasharray="5,5" stroke-width="0.5"/>
</g>
<g id="msg_Alice_Bob">
<path d="M35,70.297 L135,70.297" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000000" font-family="sans-serif" font-size="13" text-anchor="start" x="40" y="65.297" textLength="32.635">
Hello
</text>
</g>
<g id="msg_Bob_Alice">
<path d="M135,99.42999999999999 L35,99.42999999999999" fill="none" marker-end="url(#arrow)" stroke="#181818" stroke-dasharray="2,2" stroke-width="1"/>
<text dominant-baseline="auto" fill="#000000" font-family="sans-serif" font-size="13" text-anchor="start" x="40" y="94.42999999999999" textLength="12.165">
Hi
</text>
</g>
<g id="participant_Alice">
<rect fill="#E2E2F0" height="30.297" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="50" x="10" y="10"/>
<text dominant-baseline="middle" fill="#000000" font-family="sans-serif" font-size="14" text-anchor="middle" x="35" y="25.1485" textLength="34.908">
Alice
</text>
</g>
<g id="participant_Bob">
<rect fill="#E2E2F0" height="30.297" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="50" x="110" y="10"/>
<text dominant-baseline="middle" fill="#000000" font-family="sans-serif" font-size="14" text-anchor="middle" x="135" y="25.1485" textLength="26.585">
Bob
</text>
</g>
<g id="footer_Alice">
<rect fill="#E2E2F0" height="30.297" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="50" x="10" y="117.42999999999999"/>
<text dominant-baseline="middle" fill="#000000" font-family="sans-serif" font-size="14" text-anchor="middle" x="35" y="132.5785" textLength="34.908">
Alice
</text>
</g>
<g id="footer_Bob">
<rect fill="#E2E2F0" height="30.297" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="50" x="110" y="117.42999999999999"/>
<text dominant-baseline="middle" fill="#000000" font-family="sans-serif" font-size="14" text-anchor="middle" x="135" y="132.5785" textLength="26.585">
Bob
</text>
</g>
</svg>
